# writeasync-cpp

./: .editorconfig  CMakeLists.txt  CMakePresets.json  build.ps1  vcpkg.json
src/: CMakeLists.txt
src/decorator/: CMakeLists.txt
src/decorator/exe/: main.cpp
src/decorator/inc/: coin.h  coin_invert.h  coin_trace.h  decorator.h  example.h  trace.h  trace_header.h
src/decorator/lib/: coin.cpp  coin_invert.cpp  coin_trace.cpp  example.cpp  trace.cpp  trace_header.cpp
src/decorator/test/: coin_test.cpp  coin_trace_test.cpp  example_test.cpp  trace_header_test.cpp  trace_test.cpp
src/dinject/: CMakeLists.txt
src/dinject/exe/: main.cpp
src/dinject/inc/: config.h  config_ser.h  ser.h  todo.h
src/dinject/lib/: config.cpp  config_ser.cpp  todo.cpp
src/dinject/test/: config_ser_test.cpp  config_test.cpp  todo_test.cpp
src/stassert/: CMakeLists.txt
src/stassert/exe/: main.cpp
src/stassert/inc/: example.h  todo.h
src/stassert/lib/: example.cpp  todo.cpp
src/stassert/test/: Test-StaticAssert.ps1  stassert_test.cpp  todo_test.cpp
src/tasksched/: CMakeLists.txt
src/tasksched/exe/: main.cpp
src/tasksched/inc/: date_time.h  task.h  task_folder.h  task_service.h  todo.h
src/tasksched/lib/: date_time.cpp  task.cpp  task_folder.cpp  task_service.cpp  todo.cpp
src/tasksched/test/: date_time_test.cpp  stub_actions.cpp  stub_actions.h  stub_principal.cpp  stub_principal.h  stub_reginfo.cpp  stub_reginfo.h  stub_regtask.cpp  stub_regtask.h  stub_settings.cpp  stub_settings.h  stub_taskdef.cpp  stub_taskdef.h  stub_taskfolder.cpp  stub_taskfolder.h  stub_tasksvc.cpp  stub_tasksvc.h  stub_triggers.cpp  stub_triggers.h  task_folder_test.cpp  task_service_test.cpp  task_test.cpp  todo_test.cpp
src/utf16/: CMakeLists.txt
src/utf16/exe/: main.cpp
src/utf16/inc/: str.h  todo.h
src/utf16/lib/: str.cpp  todo.cpp
src/utf16/perf/: str_perf.cpp  todo_perf.cpp
src/utf16/test/: str_test.cpp  todo_test.cpp
